--- a/conf/app.conf
+++ b/conf/app.conf
@@ -19,6 +19,9 @@ redis.address = :6379
 group_info_cache_time = 60
 group_data_cache_time = 60
 password = w231520 
+# 竞技场兑换每日生个个数
+exchange.amount = 6
+wwa.dayEndJobFile = /Users/wangboo/Desktop/wwa/dayEndJob
 
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
