--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,6 +22,7 @@ password = w231520
 # 竞技场兑换每日生个个数
 exchange.amount = 6
 wwa.dayEndJobFile = /Users/wangboo/Desktop/wwa/dayEndJob
+GameServer.whiteIP = true
 
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
