--- a/conf/game_server.yml
+++ b/conf/game_server.yml
@@ -2,7 +2,7 @@
   ip: 203.195.181.103
   port: 8080
   domain: jiyu
-  name: "开发服务器"
+  name: 开发服
 # - zoneId: 2
 #   ip: 42.62.58.174
 #   port: 8080
