--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,17 +11,17 @@ app.name = wwa
 module.jobs = github.com/revel/modules/jobs
 
 # 自定义配置 
-root = /home/chengdu/go_path/src/github.com/wangboo/wwa
+root = /Users/wangboo/go/src/github.com/wangboo/wwa
 gorm.adapter = mysql 
 gorm.database_uri = root:wang@tcp(127.0.0.1:3306)/wwa?charset=utf8&parseTime=True
 redis.protocol = tcp
-redis.address = :6389
+redis.address = :6379
 group_info_cache_time = 60
 group_data_cache_time = 60
 password = w231520 
 # 竞技场兑换每日生个个数
 exchange.amount = 6
-wwa.dayEndJobFile = /home/chengdu/data/wwa/dayEndJob
+wwa.dayEndJobFile = /Users/wangboo/Desktop
 # wwa 白名单
 GameServer.whiteIP = false
 
