--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,18 +10,18 @@
 app.name = wwa
 module.jobs = github.com/revel/modules/jobs
 
-# 自定义配置 
-root = /Users/wangboo/go/src/github.com/wangboo/wwa
-gorm.adapter = mysql 
+# 自定义配置
+root = /home/platform/go/src/github.com/wangboo/wwa
+gorm.adapter = mysql
 gorm.database_uri = root:wang@tcp(127.0.0.1:3306)/wwa?charset=utf8&parseTime=True
 redis.protocol = tcp
-redis.address = :6379
+redis.address = :6389
 group_info_cache_time = 60
 group_data_cache_time = 60
-password = w231520 
+password = w231520
 # 竞技场兑换每日生个个数
 exchange.amount = 6
-wwa.dayEndJobFile = /Users/wangboo/Desktop
+wwa.dayEndJobFile = /home/chengdu/data/wwa/dayEndJob
 # wwa 白名单
 GameServer.whiteIP = false
 
@@ -171,6 +171,6 @@ module.testrunner =
 
 
 log.trace.output = off
-log.info.output  = off
-log.warn.output  = %(app.name)s.log
-log.error.output = %(app.name)s.log
+log.info.output  = /data/log/wwa/info.log
+log.warn.output  = /data/log/wwa/warn.log
+log.error.output = /data/log/wwa/error.log
