--- a/conf/game_server.yml
+++ b/conf/game_server.yml
@@ -28,3 +28,54 @@
   port: 10012
   domain: jiyu
   name: 掌中飞燕
+- zoneId: 7
+  ip: 203.195.235.101
+  port: 10013
+  domain: jiyu
+  name: 金屋藏娇
+- zoneId: 8
+  ip: 203.195.148.216
+  port: 10000
+  domain: jiyu
+  name: 西子捧心
+- zoneId: 9
+  ip: 203.195.148.216
+  port: 10001
+  name: 高阳酒徒
+  domain: jiyu
+- zoneId: 10
+  ip: 203.195.148.216
+  port: 10002
+  name: 背水一战
+  domain: jiyu
+- zoneId: 11
+  ip: 203.195.148.216
+  port: 10011
+  name: 经天纬地
+  domain: jiyu
+- zoneId: 12
+  ip: 203.195.224.152
+  port: 10001
+  name: 昭君出塞
+  domain: jiyu
+- zoneId: 13
+  ip: 203.195.224.152
+  port: 10013
+  name: 乱世红颜
+  domain: jiyu
+- zoneId: 14
+  ip: 203.195.224.152
+  port: 10014
+  name: 明修栈道
+  domain: jiyu
+- zoneId: 10001
+  ip: 203.195.224.152
+  port: 8080
+  domain: jiyu
+  name: 十面埋伏
+- zoneId: 10002
+  ip: 203.195.224.152
+  port: 10000
+  name: 运筹帷幄
+  domain: jiyu
+  domain: jiyu
