--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,11 +11,11 @@ app.name = wwa
 module.jobs = github.com/revel/modules/jobs
 
 # 自定义配置
-root = /Users/wangboo/go/src/github.com/wangboo/wwa
+root = /home/platform/go/src/github.com/wangboo/wwa
 gorm.adapter = mysql
 gorm.database_uri = root:wang@tcp(127.0.0.1:3306)/wwa?charset=utf8&parseTime=True
 redis.protocol = tcp
-redis.address = :6379
+redis.address = :6389
 group_info_cache_time = 60
 group_data_cache_time = 60
 password = w231520
@@ -26,8 +26,7 @@ wwa.dayEndJobFile = /data/log/wwa/dayEndJobFile
 GameServer.whiteIP = false
 
 mongodb = mongodb://127.0.0.1:27017/
-inv.code = i-113102-1
-
+nv.code = i-113102-1
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
 # Keep this string secret or users will be able to inject arbitrary cookie values
