fix tcp not close bug

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,7 +11,7 @@ app.name = wwa
 module.jobs = github.com/revel/modules/jobs
 
 # 自定义配置
-root = /home/platform/go/src/github.com/wangboo/wwa
+root = /Users/wangboo/go/src/github.com/wangboo/wwa
 gorm.adapter = mysql
 gorm.database_uri = root:wang@tcp(127.0.0.1:3306)/wwa?charset=utf8&parseTime=True
 redis.protocol = tcp
@@ -147,9 +147,9 @@ module.testrunner = github.com/revel/modules/testrunner
 
 # Where to log the various Revel logs
 log.trace.output = off
-log.info.output  = /data/log/wwa/info.log
-log.warn.output  = /data/log/wwa/warn.log
-log.error.output = /data/log/wwa/error.log
+log.info.output  = /dev/null
+log.warn.output  = /dev/null
+log.error.output = /dev/null
 
 
 
