--- a/conf/app.conf
+++ b/conf/app.conf
@@ -147,9 +147,9 @@ module.testrunner = github.com/revel/modules/testrunner
 
 # Where to log the various Revel logs
 log.trace.output = off
-log.info.output  = /dev/null
-log.warn.output  = /dev/null
-log.error.output = /dev/null
+log.info.output  = stdout
+log.warn.output  = stdout
+log.error.output = stderr
 
 
 
